--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "autorefresh",
   "version": "1.0.0",
   "main": "index.js",
+  "bin": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build:win": "pkg . --targets node18-win-x64 --output dist/autorefresh-win.exe",
+    "build:mac": "pkg . --targets node18-macos-x64 --output dist/autorefresh-mac",
+    "build:linux": "pkg . --targets node18-linux-x64 --output dist/autorefresh-linux",
+    "build:all": "pkg . --targets node18-win-x64,node18-macos-x64,node18-linux-x64 --output dist/autorefresh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +18,15 @@
   "dependencies": {
     "playwright": "^1.57.0"
   },
-  "type": "module"
+  "devDependencies": {
+    "pkg": "^5.8.1"
+  },
+  "type": "module",
+  "pkg": {
+    "assets": [
+      "node_modules/playwright-core/**/*",
+      "node_modules/playwright/**/*"
+    ],
+    "outputPath": "dist"
+  }
 }
