--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "playwright": "^1.57.0"
+    "playwright": "^1.57.0",
+    "pngjs": "^7.0.0",
+    "pixelmatch": "^6.0.0",
+    "jpeg-js": "^0.4.4",
+    "@techstark/opencv-js": "^4.12.0-release.1",
+    "jimp": "^0.22.10"
   },
   "devDependencies": {
     "pkg": "^5.8.1"
